Split up the main function into several actors
The queuer takes invocations submitted events and puts them on the queue.

The runner takes invocations or continuations from the queue and creates a future for them.

The waiter waits for the futures to complete and writes events for how they completed.

The continuer watches for completed invocations and continues any suspended invocation that called to them.

The inspector watches for all events and writes them out to stdout.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Python background queue processing with an async twist"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "pyright>=1.1.394",
+]
 
 [dependency-groups]
 dev = [
