--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 description = "Python background queue processing with an async twist"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "pyright>=1.1.394",
-]
+dependencies = []
 
 [dependency-groups]
 dev = [
