--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,15 @@ version = "0.1.0"
 description = "Python background queue processing with an async twist"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "pika>=1.3.2",
+]
 
 [dependency-groups]
 dev = [
     "pyright>=1.1.394",
     "ruff>=0.9.6",
+    "types-pika>=1.2.0b1",
 ]
 
 [tool.ruff.lint]
