--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Python background queue processing with an async twist"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dill>=0.3.9",
     "pika>=1.3.2",
 ]
 
