--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dill>=0.3.9",
     "pika>=1.3.2",
+    "typer[standard]>=0.15.2",
 ]
 
 [dependency-groups]
