--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dill>=0.3.9",
     "pika>=1.3.2",
+    "textual>=3.2.0",
     "typer[standard]>=0.15.2",
 ]
 
@@ -14,6 +15,7 @@ dependencies = [
 dev = [
     "pyright>=1.1.399",
     "ruff>=0.9.6",
+    "textual-dev>=1.7.0",
     "types-pika>=1.2.0b1",
 ]
 
