--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "dill>=0.3.9",
     "pika>=1.3.2",
     "textual>=3.2.0",
-    "typer[standard]>=0.15.2",
+    "typer>=0.15.4",
 ]
 
 [dependency-groups]
