--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,13 @@ version = "0.1.0"
 description = "Python background queue processing with an async twist"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "dill>=0.3.9",
-    "pika>=1.3.2",
-    "textual>=3.2.0",
-    "typer>=0.15.4",
-]
+dependencies = ["dill>=0.3.9", "pika>=1.3.2", "textual>=3.2.0", "typer>=0.15.4"]
 
 [dependency-groups]
 dev = [
     "pyright>=1.1.399",
+    "pytest>=8.4.1",
+    "pytest-timeout>=2.4.0",
     "ruff>=0.9.6",
     "textual-dev>=1.7.0",
     "types-pika>=1.2.0b1",
