--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,18 @@
 [project]
 name = "qio"
-version = "0.1.0"
+version = "0.0"
 description = "Python background queue processing with an async twist"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["dill>=0.3.9", "pika>=1.3.2", "textual>=3.2.0", "typer>=0.15.4"]
+dependencies = [
+    "dill>=0.3.9",
+    "pika>=1.3.2",
+    "textual>=3.2.0",
+    "typer>=0.15.4",
+]
+
+[project.scripts]
+qio = "qio.__main__:app"
 
 [dependency-groups]
 dev = [
@@ -21,3 +29,7 @@ select = ["E", "F", "UP", "B", "SIM", "I"]
 
 [tool.ruff.lint.isort]
 force-single-line = true
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
