Make a way to register routines
Use a `register` key in the `tool.qio` section of `pyproject.toml` to register routines.

For this project, register some sample routines that can be used for testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ select = ["E", "F", "UP", "B", "SIM", "I"]
 [tool.ruff.lint.isort]
 force-single-line = true
 
+[tool.qio]
+register = ["qio.sample"]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
