Choose the broker with toml configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ force-single-line = true
 
 [tool.qio]
 register = ["qio.sample"]
+broker = "pika"
+transport = "pika"
 
 [build-system]
 requires = ["hatchling"]
