--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
       - name: Set up Python
-        run: uv python install 3.14
+        run: uv python install 3.14t
       - name: Install dependencies
         run: uv sync --all-groups
       - name: Check formatting
