--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ qio = "qio.__main__:app"
 
 [dependency-groups]
 dev = [
-    "pyright>=1.1.406",
+    "basedpyright>=1.32.1",
     "pytest>=8.4.1",
     "pytest-timeout>=2.4.0",
     "ruff>=0.9.6",
