Rename transport to journal and bus to stream
Bus (and transport) evoke the idea of ephemerality, but this is intended to become an interface with persistence at its core. This will allow us to think of events as "event sourced" rather than merely "event driven".

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ force-single-line = true
 [tool.qio]
 register = ["qio.sample"]
 broker = "pika://localhost:5672"
-transport = "pika://localhost:5672"
+journal = "pika://localhost:5672"
 
 [build-system]
 requires = ["hatchling"]
