--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ qio = "qio.__main__:app"
 dev = [
     "basedpyright>=1.32.1",
     "pytest>=8.4.1",
+    "pytest-cov>=6.0.0",
     "pytest-timeout>=2.4.0",
     "ruff>=0.9.6",
     "textual-dev>=1.7.0",
@@ -34,6 +35,12 @@ force-single-line = true
 register = ["qio.sample"]
 broker = "pika://localhost:5672"
 journal = "pika://localhost:5672"
+
+[tool.coverage.run]
+branch = true
+source = ["qio"]
+
+
 
 [build-system]
 requires = ["hatchling"]
