Rename to queueio

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "qio"
+name = "queueio"
 version = "0.0"
 description = "Python background queue processing with an async twist"
 readme = "README.md"
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.scripts]
-qio = "qio.__main__:app"
+queueio = "queueio.__main__:app"
 
 [dependency-groups]
 dev = [
@@ -31,14 +31,14 @@ select = ["E", "F", "UP", "B", "SIM", "I"]
 [tool.ruff.lint.isort]
 force-single-line = true
 
-[tool.qio]
-register = ["qio.sample"]
+[tool.queueio]
+register = ["queueio.sample"]
 broker = "pika://localhost:5672"
 journal = "pika://localhost:5672"
 
 [tool.coverage.run]
 branch = true
-source = ["qio"]
+source = ["queueio"]
 
 
 
