Refine and validate the example in the README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,12 @@ select = ["E", "F", "UP", "B", "SIM", "I"]
 
 [tool.ruff.lint.isort]
 force-single-line = true
+
 [tool.queueio]
-register = ["queueio.sample"]
+register = [
+    "queueio.samples.basic",
+    "queueio.samples.expanded",
+]
 broker = "pika://localhost:5672"
 journal = "pika://localhost:5672"
 
