--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,24 @@
 [project]
 name = "queueio"
-version = "0.0"
-description = "Python background queue processing with an async twist"
+version = "0.2"
+description = "Python background queues with an async twist"
 readme = "README.md"
+license = "MIT"
+homepage = "https://github.com/ryanhiebert/queueio"
+repository = "https://github.com/ryanhiebert/queueio"
+authors = [
+    { name = "Ryan Hiebert", email = "ryan@ryanhiebert.com" },
+]
+keywords = ["async", "queue", "background", "tasks", "rabbitmq"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.14",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: System :: Distributed Computing",
+]
 requires-python = ">=3.14"
 dependencies = [
     "dill>=0.3.9",
