--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "queueio"
-version = "0.2.0"
+version = "0.2.1"
 description = "Python background queues with an async twist"
 readme = "README.md"
 license = "MIT"
@@ -60,6 +60,9 @@ timeout = 30
 [tool.coverage.run]
 branch = true
 source = ["queueio"]
+
+[tool.hatch.build]
+include = ["logo.svg"]
 
 [build-system]
 requires = ["hatchling"]
